fixed bg image not covering on mobile.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 .four-page {
   position: relative;
-  height: 100%;
+  height: 100vh;
   padding: 1rem;
   @media (min-width: 640px) {
     padding: 2rem;
